--- a/blogpost.html
+++ b/blogpost.html
@@ -832,6 +832,7 @@
                 <p>Mario Yesid Acuña Garizado</p>
                 <p>Omar Roa</p>
                 <p>@dmoralesk</p>
+                <p>Sebastián Felipe Díaz Guevara</p>
             </div>
             <div id="footer">
               Hecho con amor en Platzi &lt;3
